# interpreter

./: CMakeLists.txt  ExceptionWrapper.h  README.md  grammar  main.cpp
Interpreter/: API.h  Builtins.cpp  Interpreter.cpp  Interpreter.h  expressions.cpp  statements.cpp
Object/: Bool.h  Callable.cpp  Callable.h  Class.cpp  Class.h  Exception.cpp  Exception.h  Int.h  Native.cpp  Native.h  Object.cpp  Object.h  Scope.h  native.h
Object/Native/: Native.cpp  Native.h  NativeObject.cpp  NativeObject.h
Object/Types/: Array.cpp  Array.h  Bool.h  Callable.h  Exception.cpp  Exception.h  Function.h  Int.h  None.h  Range.h  Scope.h  String.h
Parser/: Parser.cpp  Parser.h  SemanticAnalysis.h
Parser/Expression/: Expression.cpp  Expression.h
Parser/Statement/: Statement.cpp  Statement.h
Tokenizer/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
TreeWalk/: API.h  Builtins.cpp  TreeWalker.cpp  TreeWalker.h
TreeWalk/Interpreter/: Interpreter.cpp  Interpreter.h  expressions.cpp  statements.cpp
TreeWalk/Semantics/: SemanticAnalyser.cpp  SemanticAnalyser.h  SemanticAnalysis.cpp  SemanticAnalysis.h  expressions.cpp  statements.cpp
tests/: test_from_source.cpp
tests/output/: Int  simple_class
tests/sources/: Int  simple_class
